--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "./node_modules/.bin/eslint --max-warnings 0 ."
   },
   "dependencies": {
+    "react": "^0.14.0",
     "react-native": "^0.11.0",
+    "react-redux": "^3.1.0",
     "react-stylish": "lemonmade/react-stylish",
-    "react-to-jsx": "^1.3.2"
+    "react-to-jsx": "^1.3.2",
+    "redux": "^3.0.2"
   },
   "devDependencies": {
     "babel": "^5.8.23",
